--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,15 @@
 		After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs latitude. We looked at four different factors: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analyis, as well as explanations and descriptions of any trends and correlations witnessed.
 
 	</p>
-	 
+
+	<section>
+	<h2> Visualizations</h2>
+	<article>
+		<a target= "_blank" href="assets/max_temp_vs._latitude.png">
+		<img src="assets/max_temp_vs._latitude.png" alt="Max_Temp">
+		</a>
+	</article>
+	
 
 
 </body>
