--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,11 @@
 		<img src="assets/max_temp_vs._latitude.png" alt="Max_Temp">
 		</a>
 	</article>
-	
+	<article>
+		<a target= "_blank" href="assets/humidity_vs_latitude.png">
+		<img src="assets/humidity_vs._latitude.png" alt="humidity">
+		</a>
+	</article>
 
 
 </body>
