--- a/Index.html
+++ b/Index.html
@@ -23,11 +23,24 @@
 		<img src="assets/max_temp_vs._latitude.png" alt="Max_Temp">
 		</a>
 	</article>
+	<hr>
 	<article>
 		<a target= "_blank" href="assets/humidity_vs_latitude.png">
 		<img src="assets/humidity_vs._latitude.png" alt="humidity">
 		</a>
 	</article>
-
+	<hr>
+	<article>
+		<a target= "_blank" href="assets/cloudiness_vs._latitude.png">
+		<img src="assets/cloudiness_vs._latitude.png" alt="cloudiness">
+		</a>
+	</article>
+	<hr>
+	<article>
+		<a target= "_blank" href="assets/wind_speed_vs._latitude.png">
+		<img src="assets/wind_speed_vs._latitude.png" alt="wind speed">
+		</a>
+	</article> 
+	<hr>
 
 </body>
