moved pngs to visualizations folder

--- a/Index.html
+++ b/Index.html
@@ -19,26 +19,26 @@
 	<section>
 	<h2> Visualizations</h2>
 	<article>
-		<a target= "_blank" href="assets/max_temp_vs._latitude.png">
-		<img src="assets/max_temp_vs._latitude.png" alt="Max_Temp">
+		<a target= "_blank" href="visualizations/max_temp_vs._latitude.png">
+		<img src="visualizations/max_temp_vs._latitude.png" alt="Max_Temp">
 		</a>
 	</article>
 	<hr>
 	<article>
-		<a target= "_blank" href="assets/humidity_vs_latitude.png">
-		<img src="assets/humidity_vs._latitude.png" alt="humidity">
+		<a target= "_blank" href="visualizations/humidity_vs_latitude.png">
+		<img src="visualizations/humidity_vs._latitude.png" alt="humidity">
 		</a>
 	</article>
 	<hr>
 	<article>
-		<a target= "_blank" href="assets/cloudiness_vs._latitude.png">
-		<img src="assets/cloudiness_vs._latitude.png" alt="cloudiness">
+		<a target= "_blank" href="visualizations/cloudiness_vs._latitude.png">
+		<img src="visualizations/cloudiness_vs._latitude.png" alt="cloudiness">
 		</a>
 	</article>
 	<hr>
 	<article>
-		<a target= "_blank" href="assets/wind_speed_vs._latitude.png">
-		<img src="assets/wind_speed_vs._latitude.png" alt="wind speed">
+		<a target= "_blank" href="visualizations/wind_speed_vs._latitude.png">
+		<img src="visualizations/wind_speed_vs._latitude.png" alt="wind speed">
 		</a>
 	</article> 
 	<hr>
