--- a/Index.html
+++ b/Index.html
@@ -17,30 +17,36 @@
 	</p>
 
 	<section>
-	<h2> Visualizations</h2>
-	<article>
-		<a target= "_blank" href="visualizations/max_temp_vs._latitude.png">
-		<img src="visualizations/max_temp_vs._latitude.png" alt="Max_Temp">
-		</a>
-	</article>
-	<hr>
-	<article>
-		<a target= "_blank" href="visualizations/humidity_vs_latitude.png">
-		<img src="visualizations/humidity_vs._latitude.png" alt="humidity">
-		</a>
-	</article>
-	<hr>
-	<article>
-		<a target= "_blank" href="visualizations/cloudiness_vs._latitude.png">
-		<img src="visualizations/cloudiness_vs._latitude.png" alt="cloudiness">
-		</a>
-	</article>
-	<hr>
-	<article>
-		<a target= "_blank" href="visualizations/wind_speed_vs._latitude.png">
-		<img src="visualizations/wind_speed_vs._latitude.png" alt="wind speed">
-		</a>
-	</article> 
-	<hr>
+		<h2> Visualizations</h2>
+		<article>
+			<a target= "_blank" href="visualizations/max_temp_vs._latitude.png">
+			<img src="visualizations/max_temp_vs._latitude.png" alt="Max_Temp">
+			</a>
+			<p><em>Max Temp Map</em></p>
+		</article>
+		<hr>
+		<article>
+			<a target= "_blank" href="visualizations/humidity_vs_latitude.png">
+			<img src="visualizations/humidity_vs._latitude.png" alt="humidity">
+			</a>
+			<p><em>Humidity Map</em></p>
+		</article>
+		<hr>	
+		<article>
+			<a target= "_blank" href="visualizations/cloudiness_vs._latitude.png">
+			<img src="visualizations/cloudiness_vs._latitude.png" alt="cloudiness">
+			</a>
+			<p><em>Clouidness Map</em></p>
+		</article>
+		<hr>
+		<article>
+			<a target= "_blank" href="visualizations/wind_speed_vs._latitude.png">
+			<img src="visualizations/wind_speed_vs._latitude.png" alt="wind speed">
+			</a>
+			<p><em>Wind Speed Map</em></p>
+		</article> 
+		<hr>
+	</section>
+
 
 </body>
