html files created

--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
 	<section>
 		<h2> Visualizations</h2>
 		<article>
-			<a target= "_blank" href="visualizations/max_temp_vs._latitude.png">
+			<!-- a target= "_blank" href="visualizations/max_temp_vs._latitude.png"> -->
 			<img src="visualizations/max_temp_vs._latitude.png" alt="Max_Temp">
 			</a>
 			<p><em>Max Temp Map</em></p>
