link to max_temp added

--- a/Index.html
+++ b/Index.html
@@ -20,6 +20,7 @@
 		<h2> Visualizations</h2>
 		<article>
 			<!-- a target= "_blank" href="visualizations/max_temp_vs._latitude.png"> -->
+			<a href= 'Max_Temp.html'>
 			<img src="visualizations/max_temp_vs._latitude.png" alt="Max_Temp">
 			</a>
 			<p><em>Max Temp Map</em></p>
