Humidity link added

--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,7 @@
 		</article>
 		<hr>
 		<article>
-			<a target= "_blank" href="visualizations/humidity_vs_latitude.png">
+			<a href= 'Humidity.html'>
 			<img src="visualizations/humidity_vs._latitude.png" alt="humidity">
 			</a>
 			<p><em>Humidity Map</em></p>
