--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,7 @@
 		<article>
 			<!-- a target= "_blank" href="visualizations/max_temp_vs._latitude.png"> -->
 			<a href= 'Max_Temp.html'>
-			<img src="visualizations/max_temp_vs._latitude.png" alt="Max_Temp">
+			<img src="visualizations/max_temp_vs._latitude.png" alt="Max Temp">
 			</a>
 			<p><em>Max Temp Map</em></p>
 		</article>
@@ -34,15 +34,15 @@
 		</article>
 		<hr>	
 		<article>
-			<a target= "_blank" href="visualizations/cloudiness_vs._latitude.png">
+			<a href= 'Cloudiness.html'>
 			<img src="visualizations/cloudiness_vs._latitude.png" alt="cloudiness">
 			</a>
 			<p><em>Clouidness Map</em></p>
 		</article>
 		<hr>
 		<article>
-			<a target= "_blank" href="visualizations/wind_speed_vs._latitude.png">
-			<img src="visualizations/wind_speed_vs._latitude.png" alt="wind speed">
+			<a href= 'wind_speed.html'>
+			<img src="visualizations/wind_speed_vs._latitude.png" alt="Wind Speed">
 			</a>
 			<p><em>Wind Speed Map</em></p>
 		</article> 
