Max Temp paragraph

--- a/Cloudiness.html
+++ b/Cloudiness.html
@@ -8,7 +8,7 @@
 
 <body>
 	<section>
-		<h1> Clouidness </h1>
+		<h1> Cloudiness </h1>
 
 		<article>
 			<a target="_blank" href= "Visulatizations/Cloudiness_vs._Latitude.png">
