--- a/Humidity.html
+++ b/Humidity.html
@@ -15,5 +15,8 @@
 			<img src= "Visualizations/Humidity_vs._Latitude.png" alt= "Humidity">
 			</a>
 		</article>
+		<p>
+			sdfa
+		</p>
 	</section>
 </body>
