--- a/Max_Temp.html
+++ b/Max_Temp.html
@@ -15,6 +15,10 @@
 			<img src= "Visualizations/Max_Temp_vs._Latitude.png" alt= "Max_Temp">
 			</a>
 		</article>
+
+		<p>
+			As expected, the weather becomes significantly warmer as one approaches the equator (0 Deg. Latitude). More interstingly, however, is the fact that the southern hemisphere tends to be warmer this time of year than the northern hemisphere. This may be due to the tilt of the earth at the time of the year this data was gathered.
+		</p>
 	</section>
 </body>
 
