comparison html added

--- a/Humidity.html
+++ b/Humidity.html
@@ -16,7 +16,8 @@
 			</a>
 		</article>
 		<p>
-			sdfa
+			This sample shows consistent humidity levels around the globe for most cities. Humidity is a measure of the amount of moisture in the air. 
+
 		</p>
 	</section>
 </body>
