--- a/Cloudiness.html
+++ b/Cloudiness.html
@@ -15,5 +15,9 @@
 			<img src= "Visualizations/Cloudiness_vs._Latitude.png" alt= "Cloudiness">
 			</a>
 		</article>
+		<p>
+			There was no correlation between city latitude and cloudiness in the dataset.
+
+		</p>
 	</section>
 </body>
