--- a/Wind_Speed.html
+++ b/Wind_Speed.html
@@ -15,5 +15,10 @@
 			<img src= "Visualizations/Wind_Speed_vs._Latitude.png" alt= "Wind Speed">
 			</a>
 		</article>
+		<p>
+			 The further you move toward each pole the more windy it appears to be.
+ 			Latitude values are measured relative to the equator
+ 			and range from -90° at the South Pole to +90° at the North Pole.
+ 		</p>
 	</section>
 </body>
