--- a/Index.html
+++ b/Index.html
@@ -23,28 +23,28 @@
 			<a href= 'Max_Temp.html'>
 			<img src="visualizations/max_temp_vs._latitude.png" alt="Max Temp">
 			</a>
-			<p><em>Max Temp Map</em></p>
+			<p><em>Max Temperature</em></p>
 		</article>
 		<hr>
 		<article>
 			<a href= 'Humidity.html'>
 			<img src="visualizations/humidity_vs._latitude.png" alt="humidity">
 			</a>
-			<p><em>Humidity Map</em></p>
+			<p><em>Humidity</em></p>
 		</article>
 		<hr>	
 		<article>
 			<a href= 'Cloudiness.html'>
 			<img src="visualizations/cloudiness_vs._latitude.png" alt="cloudiness">
 			</a>
-			<p><em>Clouidness Map</em></p>
+			<p><em>Clouidness</em></p>
 		</article>
 		<hr>
 		<article>
 			<a href= 'wind_speed.html'>
 			<img src="visualizations/wind_speed_vs._latitude.png" alt="Wind Speed">
 			</a>
-			<p><em>Wind Speed Map</em></p>
+			<p><em>Wind Speed</em></p>
 		</article> 
 		<hr>
 	</section>
