--- a/Index.html
+++ b/Index.html
@@ -5,12 +5,27 @@
 	<meta charset="UTF-8">
   	<title>Landing-Page</title>
   	<link rel="stylesheet" href="Assets/html_style.css">
-  	
+
   	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
+
+
+
+
+
+
 	<h1> Summary: Latitude vs. X</h1>
+		<div class="dropdown">
+  		<button onclick="myFunction()" class="dropbtn">Dropdown</button>
+  	<div id="myDropdown" class="dropdown-content">
+    	<a href="Max_Temp.html"> Max Temp</a>
+    	<a href="Humidity.html"> Humidity</a>
+    	<a href="Cloudiness.html"> Cloudiness</a>
+    	<a href="wind_speed.html"> Wind Speed</a>
+  	</div>
+	</div>
 
 		<img src="visualizations/max_temp_vs._latitude.png" alt="Max Temp" align="left" style="width:200px; height:100px;"/> <p> The purpose of this project was to analyze how weather changes as you approach the equator. To conduct our analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p> <p> After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs latitude. We looked at four different factors: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analyis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
 
@@ -19,7 +34,7 @@
 		<article>
 			<!-- a target= "_blank" href="visualizations/max_temp_vs._latitude.png"> -->
 			<a href= 'Max_Temp.html'>
-			<img src="visualizations/max_temp_vs._latitude.png" alt="Max Temp">
+			<img src="visualizations/max_temp_vs._latitude.png" alt="max temp">
 			</a>
 			<p><em>Max Temperature</em></p>
 		</article>
@@ -40,7 +55,7 @@
 		<hr>
 		<article>
 			<a href= 'wind_speed.html'>
-			<img src="visualizations/wind_speed_vs._latitude.png" alt="Wind Speed">
+			<img src="visualizations/wind_speed_vs._latitude.png" alt="wind speed">
 			</a>
 			<p><em>Wind Speed</em></p>
 		</article> 
