--- a/Index.html
+++ b/Index.html
@@ -7,27 +7,76 @@
   	<link rel="stylesheet" href="Assets/html_style.css">
 
   	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+
+  	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  	 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 </head>
 
 <body>
 
-
-
-
-
-
 	<h1> Summary: Latitude vs. X</h1>
+  		<div class="container">
+		    <nav class="navbar">
+		      <ul>
+		        <li>
+		          <a href="#">Plots</a>
+		        </li>
+		        <li>
+		          <a href="#">Max Temperature</a>
+		        </li>
+		        <li>
+		          <a href="#">Humidity</a>
+		        </li>
+		        <li>
+		          <a href="#">Cloudiness</a>
+		        </li>
+		                <li>
+		          <a href="#">Wind Speed</a>
+		        </li>
+		      </ul>
+		    </nav>
+   		</div>
+
 		<div class="dropdown">
-  		<button onclick="myFunction()" class="dropbtn">Dropdown</button>
-  	<div id="myDropdown" class="dropdown-content">
-    	<a href="Max_Temp.html"> Max Temp</a>
-    	<a href="Humidity.html"> Humidity</a>
-    	<a href="Cloudiness.html"> Cloudiness</a>
-    	<a href="wind_speed.html"> Wind Speed</a>
-  	</div>
-	</div>
+		    <button type="button" data-toggle="dropdown">Dropdown Example
+		    <span class="caret"></span></button>
+		    <ul class="dropdown-menu">
+		      <li><a href="Max_Temp.html">Max Temp</a></li>
+		      <li><a href="Humidity.html">Humidity</a></li>
+		      <li><a href="Cloudiness.html">Cloudiness</a></li>
+		      <li><a href="wind_speed.html">Wind Speed</a></li>
+		    </ul>
+		</div>
+
+		<div class="dropdown"> 
+	  		<button onclick="myFunction()" class="dropbtn">Dropdown</button>
+
+	  		<div id="myDropdown" class="dropdown-content">
+	    		<a href="Max_Temp.html"> Max Temp</a>
+	    		<a href="Humidity.html"> Humidity</a>
+	    		<a href="Cloudiness.html"> Cloudiness</a>
+	    		<a href="wind_speed.html"> Wind Speed</a>
+	  		</div>
+		</div>
 
 		<img src="visualizations/max_temp_vs._latitude.png" alt="Max Temp" align="left" style="width:200px; height:100px;"/> <p> The purpose of this project was to analyze how weather changes as you approach the equator. To conduct our analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p> <p> After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs latitude. We looked at four different factors: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analyis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
+
+
+
+		<div class="dropdown">
+			  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			    Dropdown button
+			  </button>
+			  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+			    <a class="dropdown-item" href="Max_Temp.html">Max Temp</a>
+			    <a class="dropdown-item" href="Humidity.html">Humidity</a>
+			    <a class="dropdown-item" href="Cloudiness.html">Cloudiness</a>
+			    <a class="dropdown-item" href="wind_speed.html">Wind Speed</a>
+			  </div>
+		</div>
 
 	<section>
 		<h2> Visualizations</h2>
