--- a/Index.html
+++ b/Index.html
@@ -4,22 +4,35 @@
 <head>
 	<meta charset="UTF-8">
   	<title>Landing-Page</title>
-  	<link rel="stylesheet" href="Assets/html_style.css">
+  	
 
   	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+  	<link rel="stylesheet" href="Assets/html_style.css">
+  	<meta name="vieport" content="width=device-width, initial-scale=1">
 
-  	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  	 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 
 </head>
 
 <body>
+	<nav class= "navbar"></nav>
 
-	<h1> Summary: Latitude vs. X</h1>
-  		<div class="container">
-		    <nav class="navbar">
+		<header>
+			<h1> Summary: Latitude vs. X</h1>
+		</header>
+
+		<div class="container">
+
+		    <div class="row">
+
+		    	<div class= "col-md-1">
+		    		<button class="dropbtn"> Dropdown</button>
+		    		<a class= "dropbtn" href= ""
+
+
+
+
 		      <ul>
 		        <li>
 		          <a href="#">Plots</a>
@@ -38,7 +51,7 @@
 		        </li>
 		      </ul>
 		    </nav>
-   		</div>
+   		</div> -->
 
 		<div class="dropdown">
 		    <button type="button" data-toggle="dropdown">Dropdown Example
@@ -62,8 +75,19 @@
 	  		</div>
 		</div>
 
-		<img src="visualizations/max_temp_vs._latitude.png" alt="Max Temp" align="left" style="width:200px; height:100px;"/> <p> The purpose of this project was to analyze how weather changes as you approach the equator. To conduct our analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p> <p> After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs latitude. We looked at four different factors: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analyis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
 
+		<div class="dropdown">
+			<button class="dropbtn">Dropdown</button>
+			<div class="dropdown-content">
+	    		<a href="Max_Temp.html"> Max Temp</a>
+	    		<a href="Humidity.html"> Humidity</a>
+	    		<a href="Cloudiness.html"> Cloudiness</a>
+	    		<a href="wind_speed.html"> Wind Speed</a>
+			</div>
+		</div>
+
+
+		<img src="visualizations/max_temp_vs._latitude.png" alt="Max Temp" align="left" style="width:200px; height:100px;"/> <p> The purpose of this project was to analyze how weather changes as you approach the equator. To conduct our analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p> <p> After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs latitude. We looked at four different factors: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analyis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
 
 
 		<div class="dropdown">
