keep deleting extra nav bars

--- a/Index.html
+++ b/Index.html
@@ -27,42 +27,10 @@
 		    <div class="row">
 
 		    	<div class= "col-md-1">
-		    		<button class="dropbtn"> Dropdown</button>
-		    		<a class= "dropbtn" href= ""
+		    		<a href="#">
+		    		<button class="dropbtn"> Home</button>
+		    		
 
-
-
-
-		      <ul>
-		        <li>
-		          <a href="#">Plots</a>
-		        </li>
-		        <li>
-		          <a href="#">Max Temperature</a>
-		        </li>
-		        <li>
-		          <a href="#">Humidity</a>
-		        </li>
-		        <li>
-		          <a href="#">Cloudiness</a>
-		        </li>
-		                <li>
-		          <a href="#">Wind Speed</a>
-		        </li>
-		      </ul>
-		    </nav>
-   		</div> -->
-
-		<div class="dropdown">
-		    <button type="button" data-toggle="dropdown">Dropdown Example
-		    <span class="caret"></span></button>
-		    <ul class="dropdown-menu">
-		      <li><a href="Max_Temp.html">Max Temp</a></li>
-		      <li><a href="Humidity.html">Humidity</a></li>
-		      <li><a href="Cloudiness.html">Cloudiness</a></li>
-		      <li><a href="wind_speed.html">Wind Speed</a></li>
-		    </ul>
-		</div>
 
 		<div class="dropdown"> 
 	  		<button onclick="myFunction()" class="dropbtn">Dropdown</button>
@@ -88,7 +56,7 @@
 
 
 		<img src="visualizations/max_temp_vs._latitude.png" alt="Max Temp" align="left" style="width:200px; height:100px;"/> <p> The purpose of this project was to analyze how weather changes as you approach the equator. To conduct our analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p> <p> After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs latitude. We looked at four different factors: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analyis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
-
+<!-- 
 
 		<div class="dropdown">
 			  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -100,7 +68,7 @@
 			    <a class="dropdown-item" href="Cloudiness.html">Cloudiness</a>
 			    <a class="dropdown-item" href="wind_speed.html">Wind Speed</a>
 			  </div>
-		</div>
+		</div> -->
 
 	<section>
 		<h2> Visualizations</h2>
