--- a/Index.html
+++ b/Index.html
@@ -26,13 +26,26 @@
 
 			<ul class= "nav navbar-nav">
 				<li class="active"><a href= "#">Home</a></li>
-				<li><a href="Max_Temp.html"> Max Temp</a></li>
-	    		<li><a href="Humidity.html"> Humidity</a></li>
-	    		<li><a href="Cloudiness.html"> Cloudiness</a></li>
-	    		<li><a href="wind_speed.html"> Wind Speed</a></li>
+					<div class="dropdown show">
+		  				<a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="Plot" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		    			Plot
+	  					</a>
+	  				</div>
+
+	  				<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+	    				<a class="dropdown-item" href="Max_Temp.html"> Max Temp</a>
+	    				<a class="dropdown-item" href="Humidity.html"> Humidity</a>
+	    				<a class="dropdown-item" href="Cloudiness.html"> Cloudiness</a>
+	    				<a class="dropdown-item" href="wind_speed.html"> Wind Speed</a>
+	  				
+			</div>
+	    		<li><a href="Comparisons.html"> Comparison</a></li>
+	    		<li><a href="Data.html"> Data</a></li>
 	    	</ul>
+
 	    </div>
 	</nav>
+
 
 		<header>
 			<h1> Summary: Latitude vs. X</h1>
@@ -42,9 +55,9 @@
 
 
 		<img src="visualizations/max_temp_vs._latitude.png" alt="Max Temp" align="left" style="width:200px; height:100px;"/> <p> The purpose of this project was to analyze how weather changes as you approach the equator. To conduct our analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p> <p> After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs latitude. We looked at four different factors: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analyis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
-<!-- 
 
-		<div class="dropdown">
+
+<!-- 		<div class="dropdown">
 			  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			    Dropdown button
 			  </button>
