--- a/Index.html
+++ b/Index.html
@@ -6,13 +6,17 @@
   	<title>Landing-Page</title>
   	
 
-  	<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
+  	
   	<meta name="viewport" content="width=device-width, initial-scale=1">
+
   	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel='stylesheet'>
+
+  	<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
 
   	<link rel="stylesheet" href="Assets/html_style.css">
   	
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  	
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 </head>
@@ -27,9 +31,7 @@
 			<ul class= "nav navbar-nav">
 				<li class="active"><a href= "#">Home</a></li>
 					<div class="dropdown show">
-		  				<a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="Plot" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-		    			Plot
-	  					</a>
+		  				<a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="Plot" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Plot</a>
 	  				</div>
 
 	  				<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
@@ -38,23 +40,24 @@
 	    				<a class="dropdown-item" href="Cloudiness.html"> Cloudiness</a>
 	    				<a class="dropdown-item" href="wind_speed.html"> Wind Speed</a>
 	  				
-			</div>
-	    		<li><a href="Comparisons.html"> Comparison</a></li>
+					</div>
+	    		<li><a href="comparisons.html"> Comparison</a></li>
 	    		<li><a href="Data.html"> Data</a></li>
 	    	</ul>
-
+	    	</div>
 	    </div>
 	</nav>
 
-
-		<header>
-			<h1> Summary: Latitude vs. X</h1>
-		</header>
-
-
-
-
-		<img src="visualizations/max_temp_vs._latitude.png" alt="Max Temp" align="left" style="width:200px; height:100px;"/> <p> The purpose of this project was to analyze how weather changes as you approach the equator. To conduct our analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p> <p> After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs latitude. We looked at four different factors: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analyis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
+<!-- This next attempt is extra for the time being, delete if you don't use-->
+	<div class="dropdown">
+	  <button onclick="myFunction()" class="dropbtn">Plot</button>
+	  <div id="myDropdown" class="dropdown-content">
+	    <a href="Max_Temp.html">Max Temp</a>
+	    <a href="Humidity.html">Humidity</a>
+	    <a href="Cloudiness.html">Cloudiness</a>
+	    <a href="wind_speed.html">Wind Speed</a>
+	  </div>
+	</div>
 
 
 <!-- 		<div class="dropdown">
@@ -68,6 +71,14 @@
 			    <a class="dropdown-item" href="wind_speed.html">Wind Speed</a>
 			  </div>
 		</div> -->
+
+
+	<header class="header">
+		<h1> Summary: Latitude vs. Weather</h1>
+	</header>
+
+		<img src="visualizations/max_temp_vs._latitude.png" alt="Max Temp" align="left" style="width:200px; height:100px;"/> <p> The purpose of this project was to analyze how weather changes as you approach the equator. To conduct our analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p> <p> After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs latitude. We looked at four different factors: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analyis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
+
 
 	<section>
 		<h2> Visualizations</h2>
@@ -101,6 +112,7 @@
 		</article> 
 		<hr>
 	</section>
+
 
 
 </body>
