comparsion & max_temp working

--- a/comparisons.html
+++ b/comparisons.html
@@ -9,6 +9,52 @@
   	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
+    <h3> Comparisons</h3>
+        
+      </div>
+    </div>
+
+    <div class='row'>
+      <div class='col-md-6'>
+        <div class="box">
+            <!-- a target= "_blank" href="visualizations/max_temp_vs._latitude.png"> -->
+            <a href= 'Max_Temp.html'>
+            <img src="visualizations/max_temp_vs._latitude.png" alt="max temp">
+            </a>
+            <p><em>Max Temperature</em></p>
+      </div>
+
+    </div>
+      <div class= 'col-md-6'>
+        <div class="box">
+            <a href= 'Humidity.html'>
+            <img src="visualizations/humidity_vs._latitude.png" alt="humidity">
+            </a>
+            <p><em>Humidity</em></p>
+      </div>
+    </div>
+    </div>
+    <div class='row'>
+      <div class= 'col-md-6'>
+        <div class="box">
+
+            <a href= 'Cloudiness.html'>
+            <img src="visualizations/cloudiness_vs._latitude.png" alt="cloudiness">
+            </a>
+            <p><em>Clouidness</em></p>
+        </div>
+
+      </div>
+      <div class='col-md-6'>
+        <div class="box">     
+            <a href= 'wind_speed.html'>
+            <img src="visualizations/wind_speed_vs._latitude.png" alt="wind speed">
+            </a>
+            <p><em>Wind Speed</em></p>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 </html>
