--- a/Index.html
+++ b/Index.html
@@ -60,7 +60,7 @@
 	</div>
 
 
-<!-- 		<div class="dropdown">
+		<div class="dropdown">
 			  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			    Dropdown button
 			  </button>
@@ -70,7 +70,7 @@
 			    <a class="dropdown-item" href="Cloudiness.html">Cloudiness</a>
 			    <a class="dropdown-item" href="wind_speed.html">Wind Speed</a>
 			  </div>
-		</div> -->
+		</div>
 
 
 	<header class="header">
