--- a/Max_Temp.html
+++ b/Max_Temp.html
@@ -4,25 +4,34 @@
 <head>
 	<meta charset="UTF-8">
 	<title> Max_Temp</title>
-	<link rel="stylesheet" href="Assets/html_style.css">
-  	
-  	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="Assets/html_style.css">
 </head>
 
 <body>
-	<section>
+
+  <div class= 'container'>
+    <div class='row'>
+      <div class= 'col-md-12'>
+        
+        <h4> Visualizations</h4>
+        
+      </div>
+    </div>
+
+
 		<h1> Max Temperature</h1>
 
-		<article>
 			<a target="_blank" href= "Visulatizations/Max_Temp_vs._Latitude.png">
 			<img src= "Visualizations/Max_Temp_vs._Latitude.png" alt= "Max_Temp">
 			</a>
-		</article>
+
 
 		<p>
 			As expected, the weather becomes significantly warmer as one approaches the equator (0 Deg. Latitude). More interstingly, however, is the fact that the southern hemisphere tends to be warmer this time of year than the northern hemisphere. This may be due to the tilt of the earth at the time of the year this data was gathered.
 		</p>
-	</section>
+
 </body>
 
 
