--- a/Index_again.html
+++ b/Index_again.html
@@ -88,7 +88,7 @@
             <a href= 'Humidity.html'>
             <img src="visualizations/humidity_vs._latitude.png" alt="humidity">
             </a>
-            <p><em>Humidity</em></p>
+            <p id="chart_title"><em>Humidity</em></p>  <!-- COME BACK TO ME -->
       </div>
     </div>
     </div>
@@ -113,13 +113,6 @@
       </div>
     </div>
   </div>
-
-<div class= 'container'>
-    <div class='row'>
-      <div class= 'col-md-12'>
-        
- 
-
 
 </body>
 
