--- a/Max_Temp.html
+++ b/Max_Temp.html
@@ -15,17 +15,24 @@
     <div class='row'>
       <div class= 'col-md-12'>
         
-        <h4> Visualizations</h4>
+    	<h1> Max Temperature</h1>
         
       </div>
     </div>
+  </div>
 
+  	<div class= 'container'>
+    	<div class='row'>
+      		<div class= 'col-md-12'>
+	
 
-		<h1> Max Temperature</h1>
+				<a target="_blank" href= "Visulatizations/Max_Temp_vs._Latitude.png">
+				<img src= "Visualizations/Max_Temp_vs._Latitude.png" alt= "Max_Temp">
+				</a>
 
-			<a target="_blank" href= "Visulatizations/Max_Temp_vs._Latitude.png">
-			<img src= "Visualizations/Max_Temp_vs._Latitude.png" alt= "Max_Temp">
-			</a>
+			</div>
+		</div>
+	</div>
 
 
 		<p>
@@ -34,5 +41,4 @@
 
 </body>
 
-
-
+</html>
