--- a/Cloudiness.html
+++ b/Cloudiness.html
@@ -4,23 +4,39 @@
 <head>
 	<meta charset="UTF-8">
 	<title> Cloudiness</title>
-	<link rel="stylesheet" href="Assets/html_style.css">
-  	
-  	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="Assets/html_style.css">
 </head>
 
 <body>
-	<section>
-		<h1> Cloudiness </h1>
 
-		<article>
-			<a target="_blank" href= "Visulatizations/Cloudiness_vs._Latitude.png">
-			<img src= "Visualizations/Cloudiness_vs._Latitude.png" alt= "Cloudiness">
-			</a>
-		</article>
+  <div class= 'container'>
+    <div class='row'>
+      <div class= 'col-md-12'>
+        
+    	<h1> Cloudiness</h1>
+        
+      </div>
+    </div>
+  </div>
+
+  	<div class= 'container'>
+    	<div class='row'>
+      		<div class= 'col-md-12'>
+	
+
+				<a target="_blank" href= "Cloudiness_vs._Latitude.png">
+				<img src= "Visualizations/Cloudiness_vs._Latitude.png" alt= "Max_Temp">
+				</a>
+
+			</div>
+		</div>
+	</div>
 		<p>
-			There was no correlation between city latitude and cloudiness in the dataset.
-
+			There is no correlation between cloudiness and latitude. We could put use linear regression to show this better.
 		</p>
-	</section>
+
 </body>
+
+</html>
