--- a/Wind_Speed.html
+++ b/Wind_Speed.html
@@ -3,25 +3,42 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title> Wind_Speed</title>
-	<link rel="stylesheet" href="Assets/html_style.css">
-  	
-  	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<title> Wind Speed</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="Assets/html_style.css">
 </head>
 
 <body>
-	<section>
-		<h1> Wind Speed </h1>
 
-		<article>
-			<a target="_blank" href= "Visulatizations/Wind_Speed_vs._Latitude.png">
-			<img src= "Visualizations/Wind_Speed_vs._Latitude.png" alt= "Wind Speed">
-			</a>
-		</article>
+  <div class= 'container'>
+    <div class='row'>
+      <div class= 'col-md-12'>
+        
+    	<h1> Wind Speed</h1>
+        
+      </div>
+    </div>
+  </div>
+
+  	<div class= 'container'>
+    	<div class='row'>
+      		<div class= 'col-md-12'>
+	
+
+				<a target="_blank" href= "Cloudiness_vs._Latitude.png">
+				<img src= "Visualizations/Wind_Speed_vs._Latitude.png" alt= "Max_Temp">
+				</a>
+
+			</div>
+		</div>
+	</div>
 		<p>
-			 The further you move toward each pole the more windy it appears to be.
+			The further you move toward each pole the more windy it appears to be.
  			Latitude values are measured relative to the equator
  			and range from -90° at the South Pole to +90° at the North Pole.
- 		</p>
-	</section>
+		</p>
+
 </body>
+
+</html>
