--- a/comparisons.html
+++ b/comparisons.html
@@ -41,7 +41,7 @@
             <a href= 'Cloudiness.html'>
             <img src="visualizations/cloudiness_vs._latitude.png" alt="cloudiness">
             </a>
-            <p><em>Clouidness</em></p>
+            <p><em>Cloudiness</em></p>
         </div>
 
       </div>
@@ -55,6 +55,5 @@
       </div>
     </div>
   </div>
-
 
 </html>
