--- a/comparisons.html
+++ b/comparisons.html
@@ -9,7 +9,12 @@
   	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
-    <h3> Comparisons</h3>
+<body>
+  <div class= 'container'>
+    <div class='row'>
+      <div class= 'col-md-12'>
+        
+        <h3> Visualizations</h3>
         
       </div>
     </div>
@@ -30,7 +35,7 @@
             <a href= 'Humidity.html'>
             <img src="visualizations/humidity_vs._latitude.png" alt="humidity">
             </a>
-            <p><em>Humidity</em></p>
+            <p id="chart_title"><em>Humidity</em></p>  <!-- COME BACK TO ME -->
       </div>
     </div>
     </div>
@@ -55,5 +60,11 @@
       </div>
     </div>
   </div>
+
+</body>
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
+
 
 </html>
