--- a/comparisons.html
+++ b/comparisons.html
@@ -4,20 +4,65 @@
 <head>
 	<meta charset="UTF-8">
 	<title> Comparisons</title>
-	<link rel="stylesheet" href="Assets/html_style.css">
+	
   	
   	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="Assets/html_style.css">
 </head>
 
 <body>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Latitude</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Plot
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="Max_Temp.html">Max Temp</a></li>
+            <li><a class="dropdown-item" href="Humidity.html">Humidity</a></li>
+            <li><a class="dropdown-item" href="Cloudiness.html">Cloudiness</a></li>
+            <li><a class="dropdown-item" href="wind_speed.html">Wind Speed</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="comparisons.html">Comparison</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="data.html">Data</a>
+        </li>
+<!--         <li class="nav-item">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </li> -->
+      </ul>
+<!--       <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form> -->
+    </div>
+  </div>
+</nav>
+
+
   <div class= 'container'>
     <div class='row'>
       <div class= 'col-md-12'>
         
-        <h3> Visualizations</h3>
+        <h3> Comparison: Latitude vs X</h3>
         
       </div>
     </div>
+    <a><p> Click any plot to get an in-depth analysis. </a></p>
 
     <div class='row'>
       <div class='col-md-6'>
