--- a/comparisons.html
+++ b/comparisons.html
@@ -39,7 +39,7 @@
           <a class="nav-link" href="comparisons.html">Comparison</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="data.html">Data</a>
+          <a class="nav-link" href="data_again.html">Data</a>
         </li>
 <!--         <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
