--- a/table.html
+++ b/table.html
@@ -1,4 +1,4 @@
-<table border="1" class="dataframe table-striped table-hover mystyle">
+<table border="1" class="dataframe table-striped table-hover">
   <thead>
     <tr style="text-align: right;">
       <th>City_ID</th>
