--- a/data_again.html
+++ b/data_again.html
@@ -22,9 +22,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <li class="nav-item">
+<!--         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="index_again.html">Home</a>
-        </li>
+        </li> -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Plot
@@ -59,11 +59,10 @@
       <div class= 'col-md-12'>
         
         <h2> Data</h2>
+        <a><p> The following table includes all the data used for plotting during this project. </p></a>
         
       </div>
     </div>
-
-
 
 <table border="1" class="dataframe table-striped table-hover mystyle">
   <thead>
