--- a/Cloudiness.html
+++ b/Cloudiness.html
@@ -34,7 +34,7 @@
 		</div>
 	</div>
 		<p>
-			There is no correlation between cloudiness and latitude. We could put use linear regression to show this better.
+			Cloudiness does not show strong correlation to latitude. We could use linear regression to show the lack of correlation from cloudiness to latitude. 
 		</p>
 
 </body>
