--- a/Humidity.html
+++ b/Humidity.html
@@ -34,9 +34,7 @@
 		</div>
 	</div>
 		<p>
-			The further you move toward each pole the more windy it appears to be.
- 			Latitude values are measured relative to the equator
- 			and range from -90° at the South Pole to +90° at the North Pole.
+			There is not a strong correlation between humidity and latitude. We could use linear regression to show the lack of correlation. The plot shows a great variety of values at similar latitudes but it doesn't show strong correlation. There appears to be high humidity levels in a many of the data points on the plot. 
 		</p>
 
 </body>
