--- a/Wind_Speed.html
+++ b/Wind_Speed.html
@@ -34,9 +34,7 @@
 		</div>
 	</div>
 		<p>
-			The further you move toward each pole the more windy it appears to be.
- 			Latitude values are measured relative to the equator
- 			and range from -90° at the South Pole to +90° at the North Pole.
+			Wind Speed appears to slighly increase as we move toward each pole. Latitude values are measured relative to the equator and range from -90° at the South Pole to +90° at the North Pole. We would need to examine more data points to make a definitive conclusion. 
 		</p>
 
 </body>
