--- a/data_again.html
+++ b/data_again.html
@@ -65,6 +65,8 @@
     </div>
 
 <table border="1" class="dataframe table-striped table-hover mystyle">
+<!-- <table border="1" class="dataframe mystyle"> -->
+  
   <thead>
     <tr style="text-align: right;">
       <th>City_ID</th>
