--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="index_again.html">Latitude</a>
+    <a class="navbar-brand" href="index.html">Latitude</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -77,7 +77,7 @@
         <div class="box">
             <!-- a target= "_blank" href="visualizations/max_temp_vs._latitude.png"> -->
             <a href= 'Max_Temp.html'>
-            <img src="visualizations/max_temp_vs._latitude.png" alt="max temp">
+            <img src="Visualizations/max_temp_vs._latitude.png" alt="max temp">
             </a>
             <p><em>Max Temperature</em></p>
       </div>
@@ -86,7 +86,7 @@
       <div class= 'col-md-6'>
         <div class="box">
             <a href= 'Humidity.html'>
-            <img src="visualizations/humidity_vs._latitude.png" alt="humidity">
+            <img src="Visualizations/humidity_vs._latitude.png" alt="humidity">
             </a>
             <p id="chart_title"><em>Humidity</em></p>  <!-- COME BACK TO ME -->
       </div>
@@ -97,7 +97,7 @@
         <div class="box">
 
             <a href= 'Cloudiness.html'>
-            <img src="visualizations/cloudiness_vs._latitude.png" alt="cloudiness">
+            <img src="Visualizations/cloudiness_vs._latitude.png" alt="cloudiness">
             </a>
             <p><em>Cloudiness</em></p>
         </div>
@@ -106,7 +106,7 @@
       <div class='col-md-6'>
         <div class="box">     
             <a href= 'wind_speed.html'>
-            <img src="visualizations/wind_speed_vs._latitude.png" alt="wind speed">
+            <img src="Visualizations/wind_speed_vs._latitude.png" alt="wind speed">
             </a>
             <p><em>Wind Speed</em></p>
         </div>
