--- a/Data.html
+++ b/Data.html
@@ -72,8 +72,8 @@
 
 
 
-<!-- <table border="1" class="dataframe table-striped table-hover mystyle"> -->
-<table border="1" class="mystyle">
+<table border="1" class="dataframe table-striped table-hover mystyle">
+<!-- <table border="1" class="mystyle"> -->
   <thead>
     <tr style="text-align: right;">
       <th>City_ID</th>
