Wind_Speed_vs._Latitude cap change

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <div class='col-md-6'>
         <div class="box">     
             <a href= 'wind_speed.html'>
-            <img src="Visualizations/wind_speed_vs._latitude.png" alt="wind speed">
+            <img src="Visualizations/Wind_Speed_vs._Latitude.png" alt="wind speed">
             </a>
             <p><em>Wind Speed</em></p>
         </div>
