cap change to match lower to upper

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li><a class="dropdown-item" href="Max_Temp.html">Max Temp</a></li>
             <li><a class="dropdown-item" href="Humidity.html">Humidity</a></li>
             <li><a class="dropdown-item" href="Cloudiness.html">Cloudiness</a></li>
-            <li><a class="dropdown-item" href="wind_speed.html">Wind Speed</a></li>
+            <li><a class="dropdown-item" href="Wind_Speed.html">Wind Speed</a></li>
           </ul>
         </li>
         <li class="nav-item">
@@ -58,7 +58,7 @@
     <h1> Summary: Latitude vs. Weather</h1>
   </header>
 <!-- How do you get this so that there is ability to use margin spacing in style.css-->
-    <img src="Visualizations/max_temp_vs._latitude.png" alt="Max Temp" align="left" style="width:200px; height:100px;"/> 
+    <img src="Visualizations/Max_Temp_vs._Latitude.png" alt="Max Temp" align="left" style="width:200px; height:100px;"/> 
 
     <section><p> The purpose of this project was to analyze how weather changes as you approach the equator. To conduct our analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p> <p> After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs latitude. We looked at four different factors: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analyis, as well as explanations and descriptions of any trends and correlations witnessed.</p></section>
 
@@ -77,7 +77,7 @@
         <div class="box">
             <!-- a target= "_blank" href="visualizations/max_temp_vs._latitude.png"> -->
             <a href= 'Max_Temp.html'>
-            <img src="Visualizations/max_temp_vs._latitude.png" alt="max temp">
+            <img src="Visualizations/Max_Temp_vs._Latitude.png" alt="max temp">
             </a>
             <p><em>Max Temperature</em></p>
       </div>
@@ -86,7 +86,7 @@
       <div class= 'col-md-6'>
         <div class="box">
             <a href= 'Humidity.html'>
-            <img src="Visualizations/humidity_vs._latitude.png" alt="humidity">
+            <img src="Visualizations/Humidity_vs._Latitude.png" alt="humidity">
             </a>
             <p id="chart_title"><em>Humidity</em></p>  <!-- COME BACK TO ME -->
       </div>
@@ -97,7 +97,7 @@
         <div class="box">
 
             <a href= 'Cloudiness.html'>
-            <img src="Visualizations/cloudiness_vs._latitude.png" alt="cloudiness">
+            <img src="Visualizations/Cloudiness_vs._Latitude.png" alt="cloudiness">
             </a>
             <p><em>Cloudiness</em></p>
         </div>
@@ -105,7 +105,7 @@
       </div>
       <div class='col-md-6'>
         <div class="box">     
-            <a href= 'wind_speed.html'>
+            <a href= 'Wind_Speed.html'>
             <img src="Visualizations/Wind_Speed_vs._Latitude.png" alt="wind speed">
             </a>
             <p><em>Wind Speed</em></p>
