--- a/Cloudiness.html
+++ b/Cloudiness.html
@@ -27,7 +27,7 @@
 	
 
 				<a target="_blank" href= "Cloudiness_vs._Latitude.png">
-				<img src= "Visualizations/Cloudiness_vs._Latitude.png" alt= "Max_Temp">
+				<img src= "Visualizations/Cloudiness_vs._Latitude.png" alt= "cloudiness">
 				</a>
 
 			</div>
