--- a/Wind_Speed.html
+++ b/Wind_Speed.html
@@ -26,8 +26,8 @@
       		<div class= 'col-md-12'>
 	
 
-				<a target="_blank" href= "Cloudiness_vs._Latitude.png">
-				<img src= "Visualizations/Wind_Speed_vs._Latitude.png" alt= "Max_Temp">
+				<a target="_blank" href= "Wind_Speed_vs._Latitude.png">
+				<img src= "Visualizations/Wind_Speed_vs._Latitude.png" alt= "Wind Speed">
 				</a>
 
 			</div>
