change caps on comparison

--- a/Humidity.html
+++ b/Humidity.html
@@ -26,8 +26,8 @@
       		<div class= 'col-md-12'>
 	
 
-				<a target="_blank" href= "Cloudiness_vs._Latitude.png">
-				<img src= "Visualizations/Humidity_vs._Latitude.png" alt= "Max_Temp">
+				<a target="_blank" href= "Humidity_vs._Latitude.png">
+				<img src= "Visualizations/Humidity_vs._Latitude.png" alt= "Humidity">
 				</a>
 
 			</div>
