--- a/comparisons.html
+++ b/comparisons.html
@@ -31,7 +31,7 @@
             <li><a class="dropdown-item" href="Max_Temp.html">Max Temp</a></li>
             <li><a class="dropdown-item" href="Humidity.html">Humidity</a></li>
             <li><a class="dropdown-item" href="Cloudiness.html">Cloudiness</a></li>
-            <li><a class="dropdown-item" href="wind_speed.html">Wind Speed</a></li>
+            <li><a class="dropdown-item" href="Wind_Speed.html">Wind Speed</a></li>
           </ul>
         </li>
         <li class="nav-item">
@@ -67,7 +67,7 @@
         <div class="box">
             <!-- a target= "_blank" href="visualizations/max_temp_vs._latitude.png"> -->
             <a href= 'Max_Temp.html'>
-            <img src="Visualizations/max_temp_vs._latitude.png" alt="max temp">
+            <img src="Visualizations/Max_Temp_vs._Latitude.png" alt="Max Temp">
             </a>
             <p><em>Max Temperature</em></p>
       </div>
@@ -76,7 +76,7 @@
       <div class= 'col-md-6'>
         <div class="box">
             <a href= 'Humidity.html'>
-            <img src="Visualizations/humidity_vs._latitude.png" alt="humidity">
+            <img src="Visualizations/Humidity_vs._Latitude.png" alt="Humidity">
             </a>
             <p id="chart_title"><em>Humidity</em></p>  <!-- COME BACK TO ME -->
       </div>
@@ -87,7 +87,7 @@
         <div class="box">
 
             <a href= 'Cloudiness.html'>
-            <img src="Visualizations/cloudiness_vs._latitude.png" alt="cloudiness">
+            <img src="Visualizations/Cloudiness_vs._Latitude.png" alt="Cloudiness">
             </a>
             <p><em>Cloudiness</em></p>
         </div>
@@ -95,8 +95,8 @@
       </div>
       <div class='col-md-6'>
         <div class="box">     
-            <a href= 'wind_speed.html'>
-            <img src="Visualizations/wind_speed_vs._latitude.png" alt="wind speed">
+            <a href= 'Wind_Speed.html'>
+            <img src="Visualizations/Wind_Speed_vs._Latitude.png" alt="Wind Speed">
             </a>
             <p><em>Wind Speed</em></p>
         </div>
