--- a/index.html
+++ b/index.html
@@ -58,10 +58,6 @@
     <h1> Summary: Latitude vs. Weather</h1>
   </header>
 <!-- How do you get this so that there is ability to use margin spacing in style.css-->
-<!--     <img src="Visualizations/Max_Temp_vs._Latitude.png" alt="Max Temp" align="left" style="width:200px; height:100px;"/> 
-
-    <section><p> The purpose of this project was to analyze how weather changes as you approach the equator. To conduct our analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p> <p> After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs latitude. We looked at four different factors: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analyis, as well as explanations and descriptions of any trends and correlations witnessed.</p></section> -->
-
 
   <div class= 'container'>
     <div class='row'>
@@ -79,7 +75,7 @@
     <div class='row'>
       <div class='col-md-6'>
         <div class="box">
-            <!-- a target= "_blank" href="visualizations/max_temp_vs._latitude.png"> -->
+              
             <a href= 'Max_Temp.html'>
               <img src="Visualizations/Max_Temp_vs._Latitude.png" alt="max temp">
             </a>
@@ -91,7 +87,7 @@
             <a href= 'Humidity.html'>
             <img src="Visualizations/Humidity_vs._Latitude.png" alt="humidity">
             </a>
-            <p id="chart_title"><em>Humidity</em></p>  <!-- COME BACK TO ME -->
+            <p id="chart_title"><em>Humidity</em></p>  
         </div>
       </div>
     </div>
@@ -117,8 +113,65 @@
     </div>
   </div>
 
-</body>
 
+
+<!--   <div class= 'container'>
+    <div class='row'>
+      <div class= 'col-md-8'>
+
+      <img src="Visualizations/Max_Temp_vs._Latitude.png" alt="Max Temp" align="left" style="width:400px; height:200px; margin-bottom:40px; margin-right: 30px;"/> 
+        <div class='col-md-12'>
+
+        <p> The purpose of this project was to analyze how weather changes as you approach the equator. To conduct our analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p> <p> After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs latitude. We looked at four different factors: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analyis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
+        </div>
+      </div>
+
+      <div class= 'col-md-4'>
+        <h2> Visualizations</h2>
+          <div class='row'>
+              <div class='col-md-6'>
+              <div class="box">
+                <a href= 'Max_Temp.html'>
+                <img src="Visualizations/Max_Temp_vs._Latitude.png" alt="max temp" style="width:200px; height:100px;">
+                </a>
+                <p><em>Max Temperature</em></p>
+              </div>
+              </div>
+          <div class= 'col-md-6'>
+           <div class="box">
+            <a href= 'Humidity.html'>
+            <img src="Visualizations/Humidity_vs._Latitude.png" alt="humidity" style="width:200px; height:100px;">
+            </a>
+            <p id="chart_title"><em>Humidity</em></p>
+          </div>
+          </div>
+        </div>
+    <div class='row'>
+      <div class= 'col-md-6'>
+        <div class="box">
+
+            <a href= 'Cloudiness.html'>
+            <img src="Visualizations/Cloudiness_vs._Latitude.png" alt="cloudiness" style="width:200px; height:100px;">
+            </a>
+            <p><em>Cloudiness</em></p>
+        </div>
+
+      </div>
+      <div class='col-md-6'>
+        <div class="box">     
+            <a href= 'Wind_Speed.html'>
+            <img src="Visualizations/Wind_Speed_vs._Latitude.png" alt="wind speed" style="width:200px; height:100px;">
+            </a>
+            <p><em>Wind Speed</em></p>
+        </div>
+      </div>
+    </div>
+  </div>
+      </div> -->
+
+
+
+</body>
 
 
 
