--- a/Humidity.html
+++ b/Humidity.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="Assets/html_style.css">
 </head>
 
-<body>
+<body class= 'black'>
 
   <div class= 'container'>
     <div class='row'>
@@ -22,7 +22,7 @@
   </div>
 
   	<div class= 'container'>
-    	<div class='row'>
+    	<div class='row'style= "margin-top: 40px;">
       		<div class= 'col-md-12'>
 	
 
@@ -32,7 +32,7 @@
 
 			</div>
 		</div>
-	</div>
+	</div >
 		<p>
 			There is not a strong correlation between humidity and latitude. We could use linear regression to show the lack of correlation. The plot shows a great variety of values at similar latitudes but it doesn't show strong correlation. There appears to be high humidity levels in a many of the data points on the plot. 
 		</p>
