--- a/Wind_Speed.html
+++ b/Wind_Speed.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="Assets/html_style.css">
 </head>
 
-<body>
+<body class= 'black'>
 
   <div class= 'container'>
     <div class='row'>
