--- a/comparisons.html
+++ b/comparisons.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="Assets/html_style.css">
 </head>
 
-<body>
+<body class= 'black'>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
