--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
 </head>
 
-<body>
+<body class='black'>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html">Latitude</a>
